Name every tool kind correctly and populate events when polling (#172)
* fix: name every tool kind correctly and populate events when polling

waitForResult() reported an HTTP tool as "HTTP", an MCP tool as
"CALL_MCP_TOOL", an agent-as-tool as "SUB_WORKFLOW", a human tool as "HUMAN"
and an image tool as "GENERATE_IMAGE" — the tool name came from getTaskType(),
which is only the tool's own name for a worker, because Conductor rewrites an
executed SIMPLE task's type to the task name. It also missed tool calls
entirely on non-OpenAI providers: selection keyed on the reference name
starting "call_", which is the provider's tool-call id format, so an
Anthropic-backed run (toolu_) recorded none. And getEvents() was hard-coded to
null on this path, so a run that called three tools looked like one that did
nothing.

- identify a tool task by task type, allowlisting off the server's
  ToolCompiler.TYPE_MAP plus _agent_tool_name, never the reference name
- resolve the name from inputData._agent_tool_name, then inputData.method,
  then getTaskDefName()
- synthesize tool_call/tool_result events per tool task and close with a
  terminal done/error event, so both paths report the same call the same way
- skip a tool task that has neither finished nor produced output, and report
  the whole output map for a tool whose output isn't wrapped in "result"
- strip every _-prefixed key from a streamed event's args, as the polled path
  already did

extractFromTasks had no coverage at either level; AgentHandleToolExtractionTest
covers it through the fromWorkflow seam.

* fix: find tool calls on a server that sets no tool-name tag

Detection rested entirely on the server tagging a tool task's input with
_agent_tool_name. Against a server predating that tag, every tool kind whose
per-kind compile step replaces the task input carries nothing that names it, so
isToolTask matched none of them and the calls vanished from getToolCalls()
rather than arriving under a wrong name. Two tool calls bec